--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prebuild",
-  "version": "10.0.1",
+  "name": "@shiftkey/prebuild",
+  "version": "10.0.2-pre",
   "description": "A command line tool for easily making prebuilt binaries for multiple versions of node, electron or node-webkit on a specific platform",
   "scripts": {
     "test": "verify-travis-appveyor && tape test && npm run lint",
@@ -31,7 +31,7 @@
     "minimist": "^1.1.2",
     "mkdirp": "^0.5.1",
     "napi-build-utils": "^1.0.1",
-    "node-abi": "^2.2.0",
+    "@shiftkey/node-abi": "2.19.2-pre",
     "node-gyp": "^6.0.1",
     "node-ninja": "^1.0.1",
     "noop-logger": "^0.1.0",
